# Connecticoin

./: .appveyor.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh  test_06_script_b.sh
build-aux/m4/: bitcoin_qt.m4
build_msvc/: README.md
build_msvc/test_bitcoin/: test_bitcoin.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
contrib/: README.md  gitian-build.py  install_db4.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: README.md
contrib/linearize/: README.md  example-linearize.cfg
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist
contrib/qos/: tc.sh  (+1 more)
depends/: README.md  description.md
doc/: build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md
doc/man/: Makefile.am
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  httpserver.cpp  init.cpp  net.cpp  net_processing.cpp  netaddress.cpp  pow.cpp  txdb.cpp  validation.cpp  version.h
test/: README.md
(+221 files in other folders)
